--- a/index.html
+++ b/index.html
@@ -14,7 +14,6 @@
 <header></header>
 
 <div class="bg-cover bg-no-repeat bg-center " style="background-image: url('assets/images/bg.jpg');">
-
     <section id="kv" class="z-10">
         <div class="relative flex ">
             <div class="flex-1 bg-cover bg-no-repeat bg-center">
@@ -50,7 +49,7 @@
         </div>
     </section>
     <section id="literature" class="z-0 relative overflow-hidden">
-        <div class="relative flex sm:h-[3400px] md:h-[3400px] lg:h-[2800px] xl:h-[3400px]">
+        <div class="relative flex sm:h-[3400px] md:h-[3400px] lg:h-[3400px] xl:h-[3400px]">
             <div class="absolute top-24 left-0 lt_img_1">
                 <img src="assets/images/water_park_61.png"
                      class="  w-full h-full object-contain">
@@ -79,15 +78,15 @@
                 <img src="assets/images/p_txt_1.png"
                      class=" w-full h-full object-contain">
             </div>
-            <div class="absolute  top-25/48 left-6/24xl:top-25/48 xl:left-6/24">
-                <img src="assets/images/p_txt_1.png"
+            <div class="absolute  top-25/48 left-6/24 xl:top-25/48 xl:left-6/24">
+                <img src="assets/images/p_txt_2.png"
                      class=" w-full h-full object-contain">
             </div>
-            <div class="absolute top-1/12 left-9/12   sm:top-1/12 sm:left-10/12  md:top-1/12  md:left-9/12 lg:top-3/12  lg:left-9/12 xl:top-34/48 xl:left-10/12">
-                <img src="assets/images/p_txt_1.png"
+            <div class="absolute top-34/48 left-10/12 xl:top-34/48 xl:left-10/12">
+                <img src="assets/images/p_txt_3.png"
                      class=" w-full h-full object-contain">
             </div>
-            <div class="absolute top-1/12 left-9/12  z-30  sm:top-1/12 sm:left-10/12  md:top-1/12  md:left-9/12 lg:top-3/12  lg:left-9/12 xl:top-16/48 xl:left-5/48">
+            <div class="absolute top-16/48 left-5/48 xl:top-16/48 xl:left-5/48">
                 <img src="assets/images/water_park_111.png"
                      class=" w-full h-full object-contain">
             </div>
@@ -95,24 +94,23 @@
                 <img src="assets/images/water_park_12.png"
                      class="md:1/2  lg:w-3/4  xl:w-10/12 2xl:w-full  object-contain">
             </div>
-            <div class="absolute lt_img_6 sm:top-1/12 sm:left-10/12  md:top-1/12  md:left-9/12 lg:top-3/12  lg:left-9/12 xl:top-19/48 xl:left-35/48">
+            <div class="absolute lt_img_6 top-19/48 left-35/48 xl:top-19/48 xl:left-35/48">
                 <img src="assets/images/junlin_43.png"
                      class=" w-full h-full object-contain">
             </div>
-            <div class="absolute  lt_img_7 sm:top-1/12 sm:left-10/12  md:top-1/12  md:left-9/12 lg:top-3/12  lg:left-9/12 xl:top-34/48 xl:left-5/48">
+            <div class="absolute  lt_img_7 top-34/48 left-5/48 xl:top-34/48 xl:left-5/48">
                 <img src="assets/images/junlin_71.png"
                      class=" w-full h-full object-contain">
             </div>
-            <div class="absolute z-30 lt_img_8 sm:top-1/12 sm:left-10/12  md:top-1/12  md:left-9/12 lg:top-3/12  lg:left-9/12 xl:top-23/48 xl:left-19/48">
+            <div class="absolute z-30 lt_img_8 top-23/48 left-19/48 xl:top-23/48 xl:left-19/48">
                 <img src="assets/images/junlin_911.png"
                      class=" w-full h-full object-contain">
             </div>
-            <div class="absolute z-20 lt_img_9 sm:top-1/12 sm:left-10/12  md:top-1/12  md:left-9/12 lg:top-3/12  lg:left-9/12 xl:top-30/48 xl:left-28/48">
+            <div class="absolute z-20 lt_img_9 top-30/48 left-28/48 xl:top-30/48 xl:left-28/48">
                 <img src="assets/images/junlin_37.png"
                      class=" w-full h-full object-contain">
             </div>
-            <div class="absolute flex flex-wrap justify-center transform -translate-x-1/2
-        sm:top-1/12 sm:left-10/12  md:top-1/12  md:left-9/12 lg:top-3/12  lg:left-9/12 xl:top-40/48 xl:left-1/2">
+            <div class="absolute flex flex-wrap justify-center transform -translate-x-1/2 top-40/48 left-1/2 xl:top-40/48 xl:left-1/2">
                 <div class="w-[800px] flex justify-center flex-wrap">
                     <div class="z-20 lt_img_10 mb-[68px] ">
                         <img src="assets/images/mbook.png" alt="圖片">
@@ -129,20 +127,19 @@
     </section>
     <section id="story" class="relative">
         <div class="relative flex flex-wrap  overflow-hidden  sm:h-[2450px] md:h-[2450px] lg:h-[2450px] xl:h-[2450px]">
-            <div class="absolute st_img_1  sm:top-1/12 sm:left-10/12  md:top-1/12  md:left-9/12 lg:top-3/12  lg:left-9/12 xl:top-4/48 xl:left-6/48">
+            <div class="absolute st_img_1  top-4/48  left-6/48xl:top-4/48 xl:left-6/48">
                 <img src="assets/images/fuga_lane_21.png"
                      class=" w-full h-full object-contain">
             </div>
-            <div class="absolute st_img_2 sm:top-1/12 sm:left-10/12  md:top-1/12  md:left-9/12 lg:top-3/12  lg:left-9/12 xl:top-2/48 xl:left-28/48">
+            <div class="absolute st_img_2 top-2/48 left-28/48 xl:top-2/48 xl:left-28/48">
                 <img src="assets/images/fuga_lane_25.png"
                      class=" w-full h-full object-contain">
             </div>
-            <div class="absolute st_img_3 sm:top-1/12 sm:left-10/12  md:top-1/12  md:left-9/12 lg:top-3/12  lg:left-9/12 xl:top-1/48 xl:left-40/48">
+            <div class="absolute st_img_3 top-1/48 left-40/48 top-1/48 xl:left-40/48">
                 <img src="assets/images/story_3.png"
                      class=" w-full h-full object-contain">
             </div>
-            <div class="absolute flex flex-wrap justify-center transform -translate-x-1/2
-        sm:top-1/12 sm:left-10/12  md:top-1/12  md:left-9/12 lg:top-3/12  lg:left-9/12 xl:top-12/48 xl:left-1/2">
+            <div class="absolute flex flex-wrap justify-center transform -translate-x-1/2 top-12/48 left-1/2 xl:top-12/48 xl:left-1/2">
                 <div class="w-[700px] flex justify-center flex-wrap ">
                     <div class="st_img_4 mb-[100px]">
                         <img src="assets/images/story_4.png"
@@ -160,13 +157,12 @@
             </div>
 
 
-            <div class="absolute flex justify-center flex-wrap w-full h-4/12 xl:top-24/48">
+            <div class="absolute flex justify-center flex-wrap w-full h-4/12 top-24/48 xl:top-24/48">
                 <div class="border-2 border-gray-900 w-full  sm:w-2/2 md:w-2/3 lg:w-4/4 xl:w-46/48"></div>
                 <img src="assets/images/illus.png" alt="插畫地圖"
-                     class="illus  absolute xl:top-1/2 ">
+                     class="illus  absolute top-1/2 xl:top-1/2 ">
             </div>
-            <div class="absolute  flex justify-center flex-wrap
-         sm:top-1/12 sm:left-10/12  md:top-1/12  md:left-9/12 lg:top-3/12  lg:left-9/12 xl:top-44/48 xl:left-1/2 ">
+            <div class="absolute  flex justify-center flex-wrap top-44/48  left-1/2 xl:top-44/48 xl:left-1/2 ">
                 <div class="lt_img_12 pt-12">
                     <img src="assets/images/h_line.png"
                          class=" w-full h-full object-contain">
@@ -175,31 +171,26 @@
         </div>
     </section>
     <section id="architect" class="relative">
-        <div class="relative flex h-[2000px] xl:h-[2000px]">
-            <div class="absolute  flex justify-center transform -translate-x-1/2 sm:left-10/12 md:left-9/12  lg:left-9/12 xl:left-1/2 ">
+        <div class="relative flex h-[2000px]  lg:h-[1800px] xl:h-[2000px]">
+            <div class="absolute  flex justify-center transform -translate-x-1/2 left-1/2 xl:left-1/2 ">
                 <div class="lt_img_12 pt-12">
                     <img src="assets/images/architect_1.png" alt="圖片"
                          class=" w-full h-full object-contain">
                 </div>
             </div>
-            <div class="absolute  flex justify-center  transform -translate-x-1/2
-         sm:top-1/12 sm:left-10/12  md:top-1/12  md:left-9/12 lg:top-3/12  lg:left-9/12 xl:top-11/48 xl:left-1/2 ">
+            <div class="absolute  flex justify-center  transform -translate-x-1/2 top-11/48  left-1/2 xl:top-11/48 xl:left-1/2 ">
                 <img src="assets/images/architect_2.png" alt="圖片"
                      class=" w-full h-full object-contain">
             </div>
-
-            <div class="absolute  flex justify-center transform -translate-x-1/2
-                sm:top-1/12 sm:left-10/12  md:top-1/12  md:left-9/12 lg:top-3/12  lg:left-9/12 xl:top-15/48 xl:left-1/2">
+            <div class="absolute  flex justify-center transform -translate-x-1/2 top-15/48  left-1/2 xl:top-15/48 xl:left-1/2">
                 <img src="assets/images/architect_avat.png" alt="圖片"
                      class=" w-full h-full object-contain">
             </div>
-            <div class="absolute  flex justify-center transform -translate-x-1/2
-                sm:top-1/12 sm:left-10/12  md:top-1/12  md:left-9/12 lg:top-3/12  lg:left-9/12 xl:top-28/48 xl:left-1/2">
+            <div class="absolute  flex justify-center transform -translate-x-1/2 top-28/48  left-1/2 xl:top-28/48 xl:left-1/2">
                 <img src="assets/images/architect_3.png" alt="圖片"
                      class=" w-full h-full object-contain">
             </div>
-            <div class="absolute top-1/2 left-1/2 transform -translate-x-1/2
-                sm:top-1/12 sm:left-10/12  md:top-1/12  md:left-9/12 lg:top-3/12  lg:left-9/12 xl:top-36/48 xl:left-1/2">
+            <div class="absolute top-1/2 left-1/2 transform -translate-x-1/2 top-36/48 left-1/2 top-36/48 xl:left-1/2">
                 <div class="w-[800px] flex justify-center flex-wrap">
                     <div class="lt_img_12 pt-12">
                         <img src="assets/images/architect_4.png" alt="圖片"
@@ -211,17 +202,17 @@
                     </div>
                 </div>
             </div>
+        </div>
     </section>
     <section id="memory" class="relative">
-        <div class="relative flex sm:h-[6250px] md:h-[6250px] lg:h-[6250px] xl:h-[6250px]">
-            <div class="absolute  flex justify-center transform -translate-x-1/2 sm:left-10/12 md:left-9/12  lg:left-9/12 xl:left-1/2  w-46/48 ">
+        <div class="relative flex sm:h-[6250px] md:h-[5250px] lg:h-[6250px] xl:h-[6250px]">
+            <div class="absolute  flex justify-center transform -translate-x-1/2 left-1/2  xl:left-1/2  w-46/48 ">
                 <div class="mem_img_12">
                     <img src="assets/images/05_1.png" alt="圖片"
                          class=" w-full h-full object-contain">
                 </div>
             </div>
-            <div class="absolute flex flex-wrap w-full justify-center transform -translate-x-1/2
-         sm:left-10/12 md:left-9/12  lg:left-9/12 xl:top-8/48  xl:left-1/2 ">
+            <div class="absolute flex flex-wrap w-full justify-center transform -translate-x-1/2 left-1/2 xl:left-1/2 ">
                 <div class="flex justify-center  ">
                     <div class=" pt-12 flex-auto pr-20">
                         <img src="assets/images/m_sketch_1.png" alt="圖片">
@@ -239,14 +230,13 @@
                     </div>
                 </div>
             </div>
-            <div class="absolute  flex justify-center transform -translate-x-1/2 sm:left-10/12 md:left-9/12  lg:left-9/12 xl:top-15/48  xl:left-1/2  w-46/48">
+            <div class="absolute  flex justify-center transform -translate-x-1/2 w-46/48 top-15/48 left-1/2 xl:top-15/48  xl:left-1/2  ">
                 <div class="mem_img_12 pt-12">
                     <img src="assets/images/01_1.png" alt="圖片"
                          class=" w-full h-full object-contain">
                 </div>
             </div>
-
-            <div class="absolute  flex justify-center transform -translate-x-1/2 sm:left-10/12 md:left-9/12  lg:left-39/12 xl:top-24/48 xl:left-1/2 ">
+            <div class="absolute  flex justify-center transform -translate-x-1/2 top-24/48 left-1/2 xl:top-24/48 xl:left-1/2 ">
                 <div class="w-[800px] flex justify-center flex-wrap">
                     <div class="mem_img_13 pt-12">
                         <img src="assets/images/m_txt_1.png" alt="圖片"
@@ -262,18 +252,15 @@
                     </div>
                 </div>
             </div>
-
-            <div class="absolute  flex justify-center transform -translate-x-1/2 sm:left-10/12 md:left-9/12  lg:left-9/12 xl:top-30/48 xl:left-1/2  w-46/48">
+            <div class="absolute  flex justify-center transform -translate-x-1/2  w-46/48 top-30/48 left-1/2 xl:top-30/48 xl:left-1/2 ">
                 <div class="mem_img_12">
                     <img src="assets/images/livingroom.png" alt="圖片"
                          class=" w-full h-full object-contain">
                 </div>
             </div>
-
-            <div class="absolute flex flex-wrap w-full justify-center transform -translate-x-1/2
-         sm:left-10/12 md:left-9/12  lg:left-9/12 xl:top-38/48  xl:left-1/2 ">
+            <div class="absolute flex flex-wrap w-full justify-center transform -translate-x-1/2 top-38/48 left-1/2 xl:top-38/48 xl:left-1/2 ">
                 <div class="flex justify-center  ">
-                    <div class=" pt-20 flex-auto pr-20">
+                    <div class=" pt-20 flex-auto pr-10 xl:pr-20">
                         <img src="assets/images/room1.png" alt="圖片">
                     </div>
                     <div class=" pt-20 flex-auto">
@@ -288,9 +275,8 @@
                         <img src="assets/images/room2.png" alt="圖片">
                     </div>
                 </div>
-
-                <div class="absolute flex justify-center xl:top-46/48  xl:left-21/48 ">
-                    <div class="room3   ">
+                <div class="absolute flex justify-center top-46/48 left-21/48 xl:top-46/48 xl:left-21/48 ">
+                    <div class="room3 ">
                         <img src="assets/images/room3.png" alt="圖片">
                     </div>
                 </div>
@@ -299,23 +285,23 @@
     </section>
 
     <section id="contact" class="relative">
-        <div class="relative flex sm:h-[1050px] md:h-[1050px] lg:h-[1050px] xl:h-[1050px] w-full">
-            <div class="absolute  flex justify-center transform -translate-x-1/2 sm:left-10/12 md:left-9/12  lg:left-9/12 xl:top-2/48  xl:left-1/2 ">
+        <div class="relative flex h-[1050px] sm:h-[1050px] md:h-[1050px] lg:h-[1050px] xl:h-[1050px] w-full">
+            <div class="absolute  flex justify-center transform -translate-x-1/2 top-2/48  left-1/2 xl:top-2/48  xl:left-1/2 ">
                 <div class=" pt-12 ">
                     <img src="assets/images/contact.png" alt="圖片">
                 </div>
             </div>
-            <div class="absolute  flex justify-center transform -translate-x-1/2 sm:left-10/12 md:left-9/12  lg:left-8/12 xl:top-7/48  xl:left-1/2 ">
+            <div class="absolute  flex justify-center transform -translate-x-1/2 top-7/48  left-1/2 xl:top-7/48  xl:left-1/2 ">
                 <div class="pt-12">
                     <img src="assets/images/booking.png" alt="圖片">
                 </div>
             </div>
-            <div id="map" class="xl:top-17/48 w-full xl:h-31/48 "></div>
+            <div id="map" class="top-17/48 xl:top-17/48 w-full h-31/48 xl:h-31/48 "></div>
         </div>
     </section>
 
     <footer id="footer" class="relative bg-white flex">
-        <div class="relative flex sm:h-[280px]  md:h-[280px]  lg:h-[280px]   xl:h-[280px] overflow-hidden">
+        <div class="relative flex h-[280px]  xl:h-[280px] overflow-hidden">
             <div class="relative pt-20 pl-20">
                 <div class="">
                     <img src="assets/images/footer_left.png" class="w-full h-full object-contain">
