--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
 <div class="bg-cover bg-no-repeat md:bg-[center_bottom_20rem] xl:bg-[center_bottom_15rem] 2xl:bg-[center_bottom_1rem]  md:bg-[url('../assets/images/bg.jpg')] sm: bg-[url('../assets/images/mobile/bg.jpg')]"
      x-data="{ open: false }">
     <section id="menu">
-        <div class="fixed z-40 w-full">
-            <div class="flex justify-end top-0 z-40 cursor-pointer">
+        <div class="fixed z-[100] w-full">
+            <div class="flex justify-end top-0 z-[90] cursor-pointer">
                 <nav>
                     <button class="w-20 h-20 relative focus:outline-none  rounded" @click="open = !open">
                         <div class="block w-5 absolute left-4 top-1/2   transform  -translate-x-1/2 -translate-y-1/2">
@@ -117,15 +117,21 @@
             </div>
 
         </div>
-        <div class="relative flex sm:block md:hidden">
-            <div class="flex-1 bg-cover bg-no-repeat bg-center">
-                <img src="assets/images/mobile/kv.png">
+<!--        <div class="relative flex sm:block md:hidden">-->
+<!--            <div class="flex-1 bg-cover bg-no-repeat bg-center">-->
+<!--                <img src="assets/images/mobile/kv.png">-->
+<!--            </div>-->
+        <div class="relative flex items-center justify-center sm:block md:hidden">
+            <div class="flex-1 bg-cover bg-no-repeat bg-center min-h-screen object-contain overflow-hidden">
+                <div class="flex justify-center">
+                    <img src="assets/images/mobile/kv.png" class="h-screen sm:max-w-max">
+                </div>
             </div>
             <div class="absolute top-0 left-0">
                 <img src="assets/images/mobile/logo_dudu.png" alt="Logo"
                      class="pt-6 pl-6  w-full h-full object-contain ">
             </div>
-            <div class="absolute pt-12 top-1/3 left-1/2  transform -translate-x-1/2">
+            <div class="absolute pt-12 top-18/48 left-1/2  transform -translate-x-1/2">
                 <img src="assets/images/mobile/center_logo.png"
                      class="w-full h-full object-contain ">
             </div>
@@ -218,12 +224,12 @@
             <div class="absolute flex flex-wrap justify-center transform -translate-x-1/2 top-40/48 left-1/2
             sm:top-35/48 sm:left-1/2 xl:top-40/48 xl:left-1/2">
                 <div id="literature" class="relative"></div>
-                <div class="w-[320px] w-[800px] flex justify-center flex-wrap  pt-12">
+                <div class="sm:w-[360px] md:w-[800px] flex justify-center flex-wrap  pt-12">
                     <div class="z-20 lt_img_10 mb-[68px] ">
                         <img src="assets/images/mbook.png" alt="記憶是一本轉譯的私人文學">
                     </div>
                     <div class="lt_img_11 left-8 mb-[40px]">
-                        <img src="assets/images/mbook_script.png" alt="描述">
+                        <img src="assets/images/mbook_script.png" alt="描述" class="w-full">
                     </div>
                     <div class="lt_img_12 ">
                         <img src="assets/images/v_line.png" alt="橫線">
@@ -297,10 +303,10 @@
                          class=" w-full h-full object-contain ">
                 </div>
             </div>
-            <div class="absolute  flex justify-center transform -translate-x-1/2 left-1/2 xl:left-1/2 sm:block md:hidden">
-                <div class="lt_img_12 pt-12">
+            <div class="absolute  flex justify-center transform -translate-x-1/2 sm:w-44/48  left-1/2 xl:left-1/2 sm:block md:hidden">
+                <div class="lt_img_12 pt-12 ">
                     <img src="assets/images/mobile/architect_1.png" alt="圖片"
-                         class=" w-full h-full object-contain ">
+                         class="w-full h-full object-contain ">
                 </div>
             </div>
             <div class="absolute  flex justify-center  transform -translate-x-1/2 top-11/48  left-1/2 xl:top-11/48 xl:left-1/2 ">
@@ -475,7 +481,7 @@
                 </div>
             </div>
             <div id="memory"
-                 class="absolute z-30 flex justify-center transform -translate-x-1/2 top-24/48 left-1/2 sm:top-22/48  md:top-23/48 xl:top-24/48 xl:left-1/2 ">
+                 class="absolute z-10 flex justify-center transform -translate-x-1/2 top-24/48 left-1/2 sm:top-22/48  md:top-23/48 xl:top-24/48 xl:left-1/2 ">
                 <div class="sm:w-[320px] md:w-[600px] w-[800px]  flex justify-center flex-wrap">
                     <div class="pt-12 sm:hidden md:block">
                         <img src="assets/images/m_txt_1.png" alt="圖片"
