--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
                          class=" w-full h-full object-contain  blur-image image-item">
                 </div>
             </div>
-            <div class="absolute  top-1/12 left-9/12 lt_img_3 sm:w-16/48  sm:top-4/48 sm:left-33/48 md:top-2/24 md:left-9/12 xl:top-2/24 xl:left-9/12">
+            <div class="absolute  top-1/12 left-9/12 lt_img_3 sm:w-16/48  sm:top-3/48 sm:left-33/48 md:top-2/24 md:left-9/12 xl:top-2/24 xl:left-9/12">
                 <div class="flex justify-center image-wrapper">
                     <img src="assets/images/coffee_house.png"
                          class=" md:max-w-[220px]  lg:max-w-[267px] xl:max-w-full object-contain  blur-image image-item">
@@ -183,7 +183,7 @@
                 <img src="assets/images/p_txt_3.png"
                      class="sm:w-28/48 md:w-40/48 lg:w-full h-full object-contain ">
             </div>
-            <div class="absolute z-30 sm:w-20/48 top-16/48 left-5/48 sm:top-11/48 sm:left-4/48  md:top-12/48 xl:top-16/48 xl:left-5/48 ">
+            <div class="absolute z-30 sm:w-20/48 top-16/48 left-5/48 sm:top-11/48 sm:left-7/48  md:top-12/48 xl:top-16/48 xl:left-5/48 ">
                 <div class="flex justify-center image-wrapper">
                     <img src="assets/images/water_park_111.png" alt="樹枝小黃花"
                          class="sm:w-28/48 md:w-29/48 w-full h-full object-contain blur-image image-item">
@@ -222,7 +222,7 @@
                 </div>
             </div>
             <div class="absolute flex flex-wrap justify-center transform -translate-x-1/2 top-40/48 left-1/2
-            sm:top-35/48 sm:left-1/2 xl:top-40/48 xl:left-1/2">
+            sm:top-35/48 sm:left-1/2 xl:top-39/48 xl:left-1/2">
                 <div id="literature" class="relative"></div>
                 <div class="sm:w-[360px] md:w-[800px] flex justify-center flex-wrap  pt-12">
                     <div class="z-20 lt_img_10 mb-[68px] ">
@@ -419,11 +419,11 @@
                     </div>
                 </div>
                 <div class="flex  sm:flex-col sm:flex-col-reverse  md:flex-row flex justify-center ">
-                    <div class="flex-auto sm:pt-10 md:pl-10 lg:pr-20  sm:pl-1/12">
-                        <img src="assets/images/m_sketch_txt_2.png" alt="圖片" class="sm:w-40/48 md:w-42/48 lg:w-full">
+                    <div class="flex-auto sm:pt-10 md:pl-10 lg:pr-20  sm:pl-3/48">
+                        <img src="assets/images/m_sketch_txt_2.png" alt="圖片" class="sm:w-44/48 md:w-42/48 lg:w-full">
                     </div>
                     <div class="m_sketch_2 image-wrapper justify-center sm:pt-2 ">
-                        <img src="assets/images/m_sketch_2.png" alt="圖片" class="sm:w-full md:w-42/48 lg:w-full">
+                        <img src="assets/images/m_sketch_2.png" alt="圖片" class="sm:px-3 sm:w-full md:w-42/48 lg:w-full">
                     </div>
                 </div>
             </div>
@@ -566,13 +566,13 @@
                     </div>
                     <div class=" mt-6 image-wrapper">
                         <img src="assets/images/room2.png" alt="圖片"
-                             class=" w-full h-full object-contain   blur-image image-item">
+                             class="sm:w-[320px] md:w-[500px]  lg:w-full h-full object-contain   blur-image image-item">
                     </div>
                 </div>
-                <div class="absolute flex justify-center top-46/48 left-21/48 md:top-46/48 md:left-16/48 xl:top-45/48 xl:left-21/48 2xl:left-23/48">
+                <div class="absolute flex justify-center top-46/48 left-21/48 md:top-46/48 md:left-20/48 xl:top-45/48 xl:left-21/48 2xl:left-23/48">
                     <div class="room3  image-wrapper">
                         <img src="assets/images/room3.png" alt="圖片"
-                             class=" w-full h-full object-contain   blur-image image-item">
+                             class="sm:w-[200px] md:w-280px]  lg:w-full w-full h-full object-contain   blur-image image-item">
                     </div>
                 </div>
             </div>
@@ -596,7 +596,7 @@
                 </div>
             </div>
 
-            <div class="absolute sm:w-[150px]  flex justify-center top-46/48 left-21/48 sm:top-44/48 sm:left-6/48 sm:block md:hidden">
+            <div class="absolute sm:w-[150px]  flex justify-center top-46/48 left-21/48 sm:top-45/48 sm:left-6/48 sm:block md:hidden">
                 <div class="room3  image-wrapper">
                     <img src="assets/images/mobile/room3.png" alt="圖片"
                          class=" w-full h-full object-contain   blur-image image-item">
