修改桌機一些位置
新稱1/96-95/96百分比

--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
                 <img src="assets/images/people2.png"
                      class="  sm:w-20/48 md:w-40/48 lg:w-44/48 xl:w-full  object-contain ">
             </div>
-            <div class="absolute h-auto  top-15/24 left-10/12 sm:top-27/48 sm:left-39/48 md:top-15/24 md:left-11/12 xl:top-15/24 xl:left-10/12">
+            <div class="absolute h-auto  top-15/24 left-10/12 sm:top-27/48 sm:left-39/48 md:top-15/24 md:left-11/12 xl:top-15/24 xl:left-10/12 2xl:top-14/24 2xl:left-10/12">
                 <img src="assets/images/people3.png"
                      class="  sm:w-29/48 md:w-40/48 lg:w-44/48 xl:w-full  object-contain ">
             </div>
@@ -179,11 +179,11 @@
                 <img src="assets/images/p_txt_2.png"
                      class="sm:w-25/48 md:w-40/48 lg:w-full h-full object-contain ">
             </div>
-            <div class="absolute top-34/48 left-10/12 sm:top-29/48 sm:left-32/48 xl:top-35/48 xl:left-10/12">
+            <div class="absolute top-34/48 left-10/12 sm:top-29/48 sm:left-32/48 xl:top-35/48 xl:left-10/12 2xl:top-31/48 2xl:left-10/12">
                 <img src="assets/images/p_txt_3.png"
                      class="sm:w-28/48 md:w-40/48 lg:w-full h-full object-contain ">
             </div>
-            <div class="absolute z-30 sm:w-20/48 top-16/48 left-5/48 sm:top-11/48 sm:left-7/48  md:top-12/48 xl:top-16/48 xl:left-5/48 ">
+            <div class="absolute z-30 sm:w-20/48 top-16/48 left-5/48 sm:top-11/48 sm:left-7/48  md:top-12/48 xl:top-16/48 xl:left-5/48 2xl:top-29/96 2xl:left-17/96 ">
                 <div class="flex justify-center image-wrapper">
                     <img src="assets/images/water_park_111.png" alt="樹枝小黃花"
                          class="sm:w-28/48 md:w-29/48 w-full h-full object-contain blur-image image-item">
@@ -258,7 +258,7 @@
                          class="sm:max-w-[100px]  object-contain blur-image image-item  ">
                 </div>
             </div>
-            <div class="absolute st_img_3 top-1/48 left-40/48 sm:top-2/48 sm:left-24/48 md:left-45/48 xl:top-1/48 xl:left-42/48 2xl:left-42/48">
+            <div class="absolute st_img_3 top-1/48 left-40/48 sm:top-2/48 sm:left-24/48 md:left-45/48 xl:top-3/48 xl:left-42/48 2xl:top-4/48 2xl:left-42/48">
                 <img src="assets/images/story_3.png"
                      class="sm:max-w-[50px] md:max-w-full h-full  md:w-10/12  lg:w-full xl:w-full object-contain ">
             </div>
@@ -287,7 +287,7 @@
                 <img src="assets/images/illus.png" alt="插畫地圖"
                      class="illus  absolute  sm:top-2/12 md:top-1/3 lg:top-1/2 xl:top-1/2 ">
             </div>
-            <div class="absolute  flex justify-center flex-wrap top-42/48 left-1/2 sm:top-38/48  md:top-40/48 lg:top-44/48 xl:top-44/48 xl:left-1/2 ">
+            <div class="absolute  flex justify-center flex-wrap top-42/48 left-1/2 sm:top-38/48  md:top-40/48 lg:top-44/48 xl:top-44/48 xl:left-1/2 2xl:top-43/48 ">
                 <div class="lt_img_12 pt-12">
                     <img src="assets/images/h_line.png"
                          class=" w-full h-full object-contain ">
